# futil-site

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  index.html  index.js  main.css  package-lock.json  package.json  webpack.common.js  webpack.dev.js
.github/workflows/: deploy.yml
data/: collect.py  config.json  examples.json  passes.json
examples/: collect.py  config.json  data.json
js/: diffEditor.js  index.js  prism-futil.js  toggleButton.js
landing/: .gitignore  README.md  config.toml
landing/content/: _index.md
landing/content/page/: about.md
landing/custom-js/: examples.js  index.js
landing/layouts/: index.html
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
src/: lib.rs
style/: diff.css  editor.css  grid.css  main.css  toggle.css
