[package]
name = "futil-site"
version = "0.1.0"
authors = ["Samuel Thomas <sgt43@cornell.edu>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
calyx = { git = "https://github.com/cucapra/futil.git", branch = "demo" }
wasm-bindgen = "0.2.69"

[build-dependencies]
cargo-lock = "4.0.1"